@@ -40,6 +40,8 @@ class SERVER_EXPORT JackMidiDriver : public JackDriver
         int fCaptureChannels;
         int fPlaybackChannels;
 
+        std::list<std::pair<std::string, std::string> > fConnections;		// Connections list
+
         jack_port_id_t fCapturePortList[DRIVER_PORT_NUM];
         jack_port_id_t fPlaybackPortList[DRIVER_PORT_NUM];
 
@@ -53,6 +55,9 @@ class SERVER_EXPORT JackMidiDriver : public JackDriver
         virtual int ProcessWriteAsync();
 
         virtual void UpdateLatencies();
+
+        void SaveConnections();
+        void RestoreConnections();
 
     public:
 
