@@ -36,6 +36,10 @@ John Emmas
   Jackdmp changes log
 ---------------------------
 
+2011-11-24 Stephane Letz  <letz@grame.fr>
+
+	* Dynamic port management in JACK/CoreMidi bridge.
+
 2011-11-21 Stephane Letz  <letz@grame.fr>
 
 	* John Emmas third auto-launch server on Windows patch.
